--- a/pom.xml
+++ b/pom.xml
@@ -93,17 +93,16 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.jboss.arquillian.container</groupId>
-			<artifactId>arquillian-weld-ee-embedded-1.1</artifactId>
-			<version>1.0.0.CR3</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.jboss.weld</groupId>
-			<artifactId>weld-core</artifactId>
-			<version>1.1.5.Final</version>
-			<scope>test</scope>
-		</dependency>
+            <groupId>org.jboss.as</groupId>
+            <artifactId>jboss-as-arquillian-container-managed</artifactId>
+            <version>7.1.1.Final</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency> 
+            <groupId>org.jboss.arquillian.protocol</groupId> 
+            <artifactId>arquillian-protocol-servlet</artifactId> 
+            <scope>test</scope> 
+        </dependency> 
 	</dependencies>
 
 	<profiles>
