--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<shiro.version>1.2.0</shiro.version>
 		<maven.compiler.source>1.6</maven.compiler.source>
 		<maven.compiler.target>1.6</maven.compiler.target>
 	</properties>
@@ -108,6 +109,16 @@
 			<groupId>org.jacoco</groupId>
 			<artifactId>org.jacoco.core</artifactId>
 			<version>0.5.8.201207111220</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.shiro</groupId>
+			<artifactId>shiro-core</artifactId>
+			<version>${shiro.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.shiro</groupId>
+			<artifactId>shiro-web</artifactId>
+			<version>${shiro.version}</version>
 		</dependency>
 	</dependencies>
 
@@ -227,12 +238,6 @@
 						<version>0.5.8.201207111220</version>
 						<executions>
 							<execution>
-								<goals>
-									<goal>prepare-agent</goal>
-								</goals>
-								<phase>initialize</phase>
-							</execution>
-							<execution>
 								<id>jacoco-site</id>
 								<phase>package</phase>
 								<goals>
@@ -258,9 +263,8 @@
 										<report>project-team</report>
 										<report>license</report>
 										<report>mailing-list</report>
-										<report>dependencies</report>
-										<report>dependency-convergence</report>
-										<report>plugin-management</report>
+										<!-- <report>dependencies</report> <report>dependency-convergence</report> 
+											<report>plugin-management</report> -->
 										<report>cim</report>
 										<report>issue-tracking</report>
 										<report>scm</report>
@@ -270,7 +274,20 @@
 								<plugin>
 									<groupId>org.apache.maven.plugins</groupId>
 									<artifactId>maven-surefire-report-plugin</artifactId>
-									<version>2.12</version>
+									<reportSets>
+										<reportSet>
+											<id>integration-tests</id>
+											<reports>
+												<report>report-only</report>
+												<report>failsafe-report-only</report>
+											</reports>
+										</reportSet>
+									</reportSets>
+								</plugin>
+								<plugin>
+									<groupId>org.jacoco</groupId>
+									<artifactId>jacoco-maven-plugin</artifactId>
+									<version>0.5.8.201207111220</version>
 								</plugin>
 								<plugin>
 									<groupId>org.apache.maven.plugins</groupId>
@@ -290,11 +307,6 @@
 									<artifactId>taglist-maven-plugin</artifactId>
 									<version>2.4</version>
 								</plugin>
-
-								<!-- Cobertura -->
-								<!-- <plugin> <groupId>org.codehaus.mojo</groupId> <artifactId>cobertura-maven-plugin</artifactId> 
-									<version>2.5.1</version> <configuration> <formats> <format>html</format> 
-									<format>xml</format> </formats> </configuration> </plugin> -->
 
 								<!-- CheckStyle -->
 								<plugin>
@@ -331,6 +343,7 @@
 										<rulesets>
 											<ruleset>configs/pmd.xml</ruleset>
 										</rulesets>
+										<targetJdk>${maven.compiler.source}</targetJdk>
 									</configuration>
 								</plugin>
 							</reportPlugins>
