--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,12 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.jboss.arquillian.extension</groupId>
+			<artifactId>arquillian-jacoco</artifactId>
+			<version>1.0.0.Alpha3</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.jacoco</groupId>
 			<artifactId>org.jacoco.core</artifactId>
 			<version>0.5.8.201207111220</version>
@@ -173,6 +179,9 @@
 					<plugin>
 						<artifactId>maven-failsafe-plugin</artifactId>
 						<version>2.6</version>
+						<configuration>
+							<reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
+						</configuration>
 						<executions>
 							<execution>
 								<goals>
@@ -255,13 +264,26 @@
 						<version>0.5.8.201207111220</version>
 						<executions>
 							<execution>
+								<id>jacoco-initialize</id>
+								<goals>
+									<goal>prepare-agent</goal>
+								</goals>
+							</execution>
+							<execution>
 								<id>jacoco-site</id>
-								<phase>package</phase>
+								<phase>post-integration-test</phase>
 								<goals>
 									<goal>report</goal>
 								</goals>
 							</execution>
 						</executions>
+					</plugin>
+
+					<!-- Release Plugin -->
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-release-plugin</artifactId>
+						<version>2.0-beta-9</version>
 					</plugin>
 
 					<!-- Site Plugin -->
@@ -280,8 +302,6 @@
 										<report>project-team</report>
 										<report>license</report>
 										<report>mailing-list</report>
-										<!-- <report>dependencies</report> <report>dependency-convergence</report> 
-											<report>plugin-management</report> -->
 										<report>cim</report>
 										<report>issue-tracking</report>
 										<report>scm</report>
@@ -378,6 +398,24 @@
 		<url>http://www.bryansaunders.net</url>
 	</organization>
 	<scm>
-		<url>ssh://f69f7ab0f62d489abff4edd0c91ea8f6@jee6divelog-bsaunders.rhcloud.com/~/git/jee6divelog.git/</url>
+		<connection>scm:git:git@github.com:bsaunder/JEE6DiveLog.git</connection>
+		<url>scm:git:git@github.com:bsaunder/JEE6DiveLog.git</url>
+		<developerConnection>scm:git:git@github.com:bsaunder/JEE6DiveLog.git</developerConnection>
 	</scm>
+	<developers>
+    <developer>
+      <id>bsaunder</id>
+      <name>Bryan Saunders</name>
+      <email>btsaunde@gmail.com</email>
+      <url>http://www.bryansaunders.net</url>
+      <roles>
+        <role>architect</role>
+        <role>developer</role>
+      </roles>
+    </developer>
+  </developers>
+  <issueManagement>
+    <system>GitHub</system>
+    <url>https://github.com/bsaunder/JEE6DiveLog/issues</url>
+  </issueManagement>
 </project>
