--- a/pom.xml
+++ b/pom.xml
@@ -179,9 +179,6 @@
 					<plugin>
 						<artifactId>maven-failsafe-plugin</artifactId>
 						<version>2.6</version>
-						<configuration>
-							<reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
-						</configuration>
 						<executions>
 							<execution>
 								<goals>
@@ -399,7 +396,7 @@
 	</organization>
 	<scm>
 		<connection>scm:git:git@github.com:bsaunder/JEE6DiveLog.git</connection>
-		<url>scm:git:git@github.com:bsaunder/JEE6DiveLog.git</url>
+		<url>https://github.com/bsaunder/JEE6DiveLog</url>
 		<developerConnection>scm:git:git@github.com:bsaunder/JEE6DiveLog.git</developerConnection>
 	</scm>
 	<developers>
