Refactor to resolve FindBugs/Build issues.

--- a/pom.xml
+++ b/pom.xml
@@ -241,7 +241,7 @@
 						<version>2.4.0</version>
 						<configuration>
 							<xmlOutput>true</xmlOutput>
-							<threshold>Exp</threshold>
+							<threshold>Low</threshold>
 							<effort>Max</effort>
 							<includeFilterFile>configs/findbugs.xml</includeFilterFile>
 						</configuration>
