#7: Added Tests for Completed REST API Endpoints.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -108,7 +108,7 @@
 	<!-- RESTEasy -->
 	<context-param>
 		<param-name>resteasy.providers</param-name>
-		<param-value>net.bryansaunders.jee6divelog.service.rest.RestSecurityInterceptor</param-value>
+		<param-value>net.bryansaunders.jee6divelog.security.interceptor.RestSecurityInterceptor</param-value>
 	</context-param>
 
 </web-app>
