--- a/pom.xml
+++ b/pom.xml
@@ -251,320 +251,312 @@
 	</dependencies>
 
 	<build>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<artifactId>maven-war-plugin</artifactId>
-					<version>2.1.1</version>
-					<configuration>
-						<outputDirectory>target</outputDirectory>
-						<warName>jee6divelog</warName>
-					</configuration>
-				</plugin>
+		<plugins>
+			<plugin>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.1.1</version>
+				<configuration>
+					<outputDirectory>target</outputDirectory>
+					<warName>jee6divelog</warName>
+				</configuration>
+			</plugin>
 
-				<plugin>
-					<artifactId>maven-surefire-plugin</artifactId>
-					<version>2.12</version>
-				</plugin>
+			<!-- Surefire (Unit Tests) Plugin -->
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.12</version>
+			</plugin>
 
-				<plugin>
-					<artifactId>maven-failsafe-plugin</artifactId>
-					<version>2.6</version>
-					<executions>
-						<execution>
-							<goals>
-								<goal>integration-test</goal>
-							</goals>
-						</execution>
-					</executions>
-				</plugin>
+			<!-- Failsafe (Integration Tests) Plugin -->
+			<plugin>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.6</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>integration-test</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 
-				<!-- License Plugin -->
-				<plugin>
-					<groupId>org.codehaus.mojo</groupId>
-					<artifactId>license-maven-plugin</artifactId>
-					<version>1.2</version>
-					<configuration>
-						<verbose>false</verbose>
-						<licenseName>gpl_v3</licenseName>
-						<licenseFile>${basedir}/LICENSE</licenseFile>
-					</configuration>
-					<executions>
-						<execution>
-							<id>first</id>
-							<goals>
-								<goal>update-file-header</goal>
-							</goals>
-							<phase>process-sources</phase>
+			<!-- License Plugin -->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>license-maven-plugin</artifactId>
+				<version>1.2</version>
+				<configuration>
+					<verbose>false</verbose>
+					<licenseName>gpl_v3</licenseName>
+					<licenseFile>${basedir}/LICENSE</licenseFile>
+				</configuration>
+				<executions>
+					<execution>
+						<id>first</id>
+						<goals>
+							<goal>update-file-header</goal>
+						</goals>
+						<phase>process-sources</phase>
+						<configuration>
+							<roots>
+								<root>src/main</root>
+								<root>src/test</root>
+							</roots>
+						</configuration>
+					</execution>
+					<execution>
+						<id>update-licenses</id>
+						<goals>
+							<goal>update-project-license</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<!-- Enunciate -->
+			<plugin>
+				<groupId>org.codehaus.enunciate</groupId>
+				<artifactId>maven-enunciate-plugin</artifactId>
+				<version>1.25</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>docs</goal>
+						</goals>
+						<configuration>
+							<docsDir>${project.build.directory}/enunciate</docsDir>
+							<configFile>enunciate.xml</configFile>
+							<indexPageName>enunciate.html</indexPageName>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<!-- CheckStyle -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-checkstyle-plugin</artifactId>
+				<version>2.8</version>
+				<configuration>
+					<consoleOutput>true</consoleOutput>
+					<configLocation>configs/checkstyle.xml</configLocation>
+					<propertyExpansion>basedir=${project.basedir}</propertyExpansion>
+					<violationSeverity>warning</violationSeverity>
+					<includeTestSourceDirectory>false</includeTestSourceDirectory>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>verify</phase>
+						<goals>
+							<goal>check</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<!-- PMD -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-pmd-plugin</artifactId>
+				<version>2.7</version>
+				<configuration>
+					<minimumTokens>100</minimumTokens>
+					<verbose>true</verbose>
+					<rulesets>
+						<ruleset>configs/pmd.xml</ruleset>
+					</rulesets>
+					<targetJdk>${maven.compiler.source}</targetJdk>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>verify</phase>
+						<goals>
+							<goal>check</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<!-- FindBugs -->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>findbugs-maven-plugin</artifactId>
+				<version>2.4.0</version>
+				<configuration>
+					<xmlOutput>true</xmlOutput>
+					<threshold>Low</threshold>
+					<effort>Max</effort>
+					<includeFilterFile>configs/findbugs.xml</includeFilterFile>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>verify</phase>
+						<goals>
+							<goal>check</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<!-- JaCoCo Code Coverage -->
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.5.8.201207111220</version>
+				<executions>
+					<execution>
+						<id>jacoco-initialize</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>jacoco-site</id>
+						<phase>post-integration-test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<!-- Release Plugin -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.0-beta-9</version>
+			</plugin>
+
+			<!-- GitHub Site Plugin -->
+			<plugin>
+				<groupId>com.github.github</groupId>
+				<artifactId>site-maven-plugin</artifactId>
+				<version>0.6</version>
+				<configuration>
+					<message>Creating site for ${project.version}</message>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>site</goal>
+						</goals>
+						<phase>site</phase>
+					</execution>
+				</executions>
+			</plugin>
+
+			<!-- Site Plugin -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-site-plugin</artifactId>
+				<version>3.0</version>
+				<configuration>
+					<reportPlugins>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-project-info-reports-plugin</artifactId>
+							<version>2.2</version>
+							<reports>
+								<report>index</report>
+								<report>project-team</report>
+								<report>license</report>
+								<report>mailing-list</report>
+								<report>cim</report>
+								<report>issue-tracking</report>
+								<report>scm</report>
+								<report>summary</report>
+							</reports>
+						</plugin>
+						<plugin>
+							<groupId>org.codehaus.enunciate</groupId>
+							<artifactId>maven-enunciate-plugin</artifactId>
+							<version>1.25</version>
 							<configuration>
-								<roots>
-									<root>src/main</root>
-									<root>src/test</root>
-								</roots>
-							</configuration>
-						</execution>
-						<execution>
-							<id>update-licenses</id>
-							<goals>
-								<goal>update-project-license</goal>
-							</goals>
-						</execution>
-						<execution>
-							<id>update-headers</id>
-							<goals>
-								<goal>update-file-header</goal>
-							</goals>
-						</execution>
-						<execution>
-							<id>download-licenses</id>
-							<goals>
-								<goal>download-licenses</goal>
-							</goals>
-						</execution>
-					</executions>
-				</plugin>
-
-				<!-- Enunciate -->
-				<plugin>
-					<groupId>org.codehaus.enunciate</groupId>
-					<artifactId>maven-enunciate-plugin</artifactId>
-					<version>1.25</version>
-					<executions>
-						<execution>
-							<goals>
-								<goal>docs</goal>
-							</goals>
-							<configuration>
-								<docsDir>${project.build.directory}/enunciate</docsDir>
-								<configFile>enunciate.xml</configFile>
+								<docsDir>enunciate</docsDir>
 								<indexPageName>enunciate.html</indexPageName>
 							</configuration>
-						</execution>
-					</executions>
-				</plugin>
+						</plugin>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-surefire-report-plugin</artifactId>
+							<reportSets>
+								<reportSet>
+									<id>integration-tests</id>
+									<reports>
+										<report>report-only</report>
+										<report>failsafe-report-only</report>
+									</reports>
+								</reportSet>
+							</reportSets>
+						</plugin>
+						<plugin>
+							<groupId>org.jacoco</groupId>
+							<artifactId>jacoco-maven-plugin</artifactId>
+							<version>0.5.8.201207111220</version>
+						</plugin>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-javadoc-plugin</artifactId>
+							<version>2.7</version>
+						</plugin>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-jxr-plugin</artifactId>
+							<version>2.1</version>
+							<configuration>
+								<aggregate>true</aggregate>
+							</configuration>
+						</plugin>
+						<plugin>
+							<groupId>org.codehaus.mojo</groupId>
+							<artifactId>taglist-maven-plugin</artifactId>
+							<version>2.4</version>
+						</plugin>
 
-				<!-- CheckStyle -->
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-checkstyle-plugin</artifactId>
-					<version>2.8</version>
-					<configuration>
-						<consoleOutput>true</consoleOutput>
-						<configLocation>configs/checkstyle.xml</configLocation>
-						<propertyExpansion>basedir=${project.basedir}</propertyExpansion>
-						<violationSeverity>warning</violationSeverity>
-						<includeTestSourceDirectory>false</includeTestSourceDirectory>
-					</configuration>
-					<executions>
-						<execution>
-							<phase>verify</phase>
-							<goals>
-								<goal>check</goal>
-							</goals>
-						</execution>
-					</executions>
-				</plugin>
+						<!-- CheckStyle -->
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-checkstyle-plugin</artifactId>
+							<version>2.8</version>
+							<configuration>
+								<configLocation>configs/checkstyle.xml</configLocation>
+								<propertyExpansion>basedir=${project.basedir}</propertyExpansion>
+							</configuration>
+						</plugin>
 
-				<!-- PMD -->
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-pmd-plugin</artifactId>
-					<version>2.7</version>
-					<configuration>
-						<minimumTokens>100</minimumTokens>
-						<verbose>true</verbose>
-						<rulesets>
-							<ruleset>configs/pmd.xml</ruleset>
-						</rulesets>
-						<targetJdk>${maven.compiler.source}</targetJdk>
-					</configuration>
-					<executions>
-						<execution>
-							<phase>verify</phase>
-							<goals>
-								<goal>check</goal>
-							</goals>
-						</execution>
-					</executions>
-				</plugin>
+						<!-- FindBugs -->
+						<plugin>
+							<groupId>org.codehaus.mojo</groupId>
+							<artifactId>findbugs-maven-plugin</artifactId>
+							<version>2.4.0</version>
+							<configuration>
+								<xmlOutput>true</xmlOutput>
+								<threshold>Exp</threshold>
+								<effort>Max</effort>
+								<includeFilterFile>configs/findbugs.xml</includeFilterFile>
+							</configuration>
+						</plugin>
 
-				<!-- FindBugs -->
-				<plugin>
-					<groupId>org.codehaus.mojo</groupId>
-					<artifactId>findbugs-maven-plugin</artifactId>
-					<version>2.4.0</version>
-					<configuration>
-						<xmlOutput>true</xmlOutput>
-						<threshold>Low</threshold>
-						<effort>Max</effort>
-						<includeFilterFile>configs/findbugs.xml</includeFilterFile>
-					</configuration>
-					<executions>
-						<execution>
-							<phase>verify</phase>
-							<goals>
-								<goal>check</goal>
-							</goals>
-						</execution>
-					</executions>
-				</plugin>
-
-				<!-- JaCoCo Code Coverage -->
-				<plugin>
-					<groupId>org.jacoco</groupId>
-					<artifactId>jacoco-maven-plugin</artifactId>
-					<version>0.5.8.201207111220</version>
-					<executions>
-						<execution>
-							<id>jacoco-initialize</id>
-							<goals>
-								<goal>prepare-agent</goal>
-							</goals>
-						</execution>
-						<execution>
-							<id>jacoco-site</id>
-							<phase>post-integration-test</phase>
-							<goals>
-								<goal>report</goal>
-							</goals>
-						</execution>
-					</executions>
-				</plugin>
-
-				<!-- Release Plugin -->
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-release-plugin</artifactId>
-					<version>2.0-beta-9</version>
-				</plugin>
-
-				<!-- GitHub Site Plugin -->
-				<plugin>
-					<groupId>com.github.github</groupId>
-					<artifactId>site-maven-plugin</artifactId>
-					<version>0.6</version>
-					<configuration>
-						<message>Creating site for ${project.version}</message>
-					</configuration>
-					<executions>
-						<execution>
-							<goals>
-								<goal>site</goal>
-							</goals>
-							<phase>site</phase>
-						</execution>
-					</executions>
-				</plugin>
-
-				<!-- Site Plugin -->
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-site-plugin</artifactId>
-					<version>3.0</version>
-					<configuration>
-						<reportPlugins>
-							<plugin>
-								<groupId>org.apache.maven.plugins</groupId>
-								<artifactId>maven-project-info-reports-plugin</artifactId>
-								<version>2.2</version>
-								<reports>
-									<report>index</report>
-									<report>project-team</report>
-									<report>license</report>
-									<report>mailing-list</report>
-									<report>cim</report>
-									<report>issue-tracking</report>
-									<report>scm</report>
-									<report>summary</report>
-								</reports>
-							</plugin>
-							<plugin>
-								<groupId>org.codehaus.enunciate</groupId>
-								<artifactId>maven-enunciate-plugin</artifactId>
-								<version>1.25</version>
-								<configuration>
-									<docsDir>enunciate</docsDir>
-									<indexPageName>enunciate.html</indexPageName>
-								</configuration>
-							</plugin>
-							<plugin>
-								<groupId>org.apache.maven.plugins</groupId>
-								<artifactId>maven-surefire-report-plugin</artifactId>
-								<reportSets>
-									<reportSet>
-										<id>integration-tests</id>
-										<reports>
-											<report>report-only</report>
-											<report>failsafe-report-only</report>
-										</reports>
-									</reportSet>
-								</reportSets>
-							</plugin>
-							<plugin>
-								<groupId>org.jacoco</groupId>
-								<artifactId>jacoco-maven-plugin</artifactId>
-								<version>0.5.8.201207111220</version>
-							</plugin>
-							<plugin>
-								<groupId>org.apache.maven.plugins</groupId>
-								<artifactId>maven-javadoc-plugin</artifactId>
-								<version>2.7</version>
-							</plugin>
-							<plugin>
-								<groupId>org.apache.maven.plugins</groupId>
-								<artifactId>maven-jxr-plugin</artifactId>
-								<version>2.1</version>
-								<configuration>
-									<aggregate>true</aggregate>
-								</configuration>
-							</plugin>
-							<plugin>
-								<groupId>org.codehaus.mojo</groupId>
-								<artifactId>taglist-maven-plugin</artifactId>
-								<version>2.4</version>
-							</plugin>
-
-							<!-- CheckStyle -->
-							<plugin>
-								<groupId>org.apache.maven.plugins</groupId>
-								<artifactId>maven-checkstyle-plugin</artifactId>
-								<version>2.8</version>
-								<configuration>
-									<configLocation>configs/checkstyle.xml</configLocation>
-									<propertyExpansion>basedir=${project.basedir}</propertyExpansion>
-								</configuration>
-							</plugin>
-
-							<!-- FindBugs -->
-							<plugin>
-								<groupId>org.codehaus.mojo</groupId>
-								<artifactId>findbugs-maven-plugin</artifactId>
-								<version>2.4.0</version>
-								<configuration>
-									<xmlOutput>true</xmlOutput>
-									<threshold>Exp</threshold>
-									<effort>Max</effort>
-									<includeFilterFile>configs/findbugs.xml</includeFilterFile>
-								</configuration>
-							</plugin>
-
-							<!-- PMD -->
-							<plugin>
-								<groupId>org.apache.maven.plugins</groupId>
-								<artifactId>maven-pmd-plugin</artifactId>
-								<version>2.7</version>
-								<configuration>
-									<minimumTokens>100</minimumTokens>
-									<verbose>false</verbose>
-									<rulesets>
-										<ruleset>configs/pmd.xml</ruleset>
-									</rulesets>
-									<targetJdk>${maven.compiler.source}</targetJdk>
-								</configuration>
-							</plugin>
-						</reportPlugins>
-					</configuration>
-				</plugin>
+						<!-- PMD -->
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-pmd-plugin</artifactId>
+							<version>2.7</version>
+							<configuration>
+								<minimumTokens>100</minimumTokens>
+								<verbose>false</verbose>
+								<rulesets>
+									<ruleset>configs/pmd.xml</ruleset>
+								</rulesets>
+								<targetJdk>${maven.compiler.source}</targetJdk>
+							</configuration>
+						</plugin>
+					</reportPlugins>
+				</configuration>
+			</plugin>
+		</plugins>
+		<pluginManagement>
+			<plugins>
 
 				<!--This plugin's configuration is used to store Eclipse m2e settings 
 					only. It has no influence on the Maven build itself. -->
