--- a/pom.xml
+++ b/pom.xml
@@ -226,12 +226,6 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.jboss.as</groupId>
-			<artifactId>jboss-as-arquillian-container-managed</artifactId>
-			<version>7.1.1.Final</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
 			<groupId>org.jboss.arquillian.protocol</groupId>
 			<artifactId>arquillian-protocol-servlet</artifactId>
 			<scope>test</scope>
@@ -618,6 +612,85 @@
 
 
 	<profiles>
+		<profile>
+			<id>arquillian-local</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+		    	</activation>
+			<dependencies>
+				<dependency>
+					<groupId>org.jboss.as</groupId>
+					<artifactId>jboss-as-arquillian-container-managed</artifactId>
+					<version>7.1.1.Final</version>
+					<scope>test</scope>
+				</dependency>
+			</dependencies>
+			<build>
+			    <plugins>
+				<plugin>
+				    <artifactId>maven-dependency-plugin</artifactId>
+				    <executions>
+					<execution>
+					    <id>unpack</id>
+					    <phase>process-test-classes</phase>
+					    <goals>
+						<goal>unpack</goal>
+					    </goals>
+					    <configuration>
+						<artifactItems>
+						    <artifactItem>
+						        <groupId>org.jboss.as</groupId>
+						        <artifactId>jboss-as-dist</artifactId>
+						        <version>7.1.1.Final</version>
+						        <type>zip</type>
+						        <overWrite>false</overWrite>
+						        <outputDirectory>target</outputDirectory>
+						    </artifactItem>
+						</artifactItems>
+					    </configuration>
+					</execution>
+				    </executions>
+				</plugin>
+			    </plugins>
+			</build> 
+		</profile>
+		<profile>
+			<id>arquillian-openshift</id>
+			<dependencies>
+				<dependency>
+					<groupId>org.jboss.shrinkwrap.resolver</groupId>
+					<artifactId>shrinkwrap-resolver-impl-maven</artifactId>
+					<version>2.0.0-alpha-1</version>
+					<scope>test</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.jboss.arquillian.container</groupId>
+					<artifactId>arquillian-openshift-express</artifactId>
+					<version>1.0.0.Beta1</version>
+					<scope>test</scope>
+				</dependency>
+			</dependencies>
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-failsafe-plugin</artifactId>
+						<version>2.6</version>
+						<configuration>
+							<systemPropertyVariables>
+								<arquillian.launch>openshift</arquillian.launch>
+							</systemPropertyVariables>
+						</configuration>
+						<executions>
+							<execution>
+								<goals>
+									<goal>integration-test</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
 		<profile>
 			<!-- When built in OpenShift the 'openshift' profile will be used when 
 				invoking mvn. -->
