--- a/pom.xml
+++ b/pom.xml
@@ -625,6 +625,17 @@
 					<scope>test</scope>
 				</dependency>
 			</dependencies>
+		</profile>
+		<profile>
+			<id>arquillian-managed</id>
+			<dependencies>
+				<dependency>
+					<groupId>org.jboss.as</groupId>
+					<artifactId>jboss-as-arquillian-container-managed</artifactId>
+					<version>7.1.1.Final</version>
+					<scope>test</scope>
+				</dependency>
+			</dependencies>
 			<build>
 			    <plugins>
 				<plugin>
@@ -651,6 +662,22 @@
 					</execution>
 				    </executions>
 				</plugin>
+				<plugin>
+						<artifactId>maven-failsafe-plugin</artifactId>
+						<version>2.6</version>
+						<configuration>
+							<systemPropertyVariables>
+								<arquillian.launch>jbossas-managed</arquillian.launch>
+							</systemPropertyVariables>
+						</configuration>
+						<executions>
+							<execution>
+								<goals>
+									<goal>integration-test</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
 			    </plugins>
 			</build> 
 		</profile>
