--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: java
 jdk: openjdk6
-script: "mvn clean install -P arquillian-jboss-managed"
+script: "mvn install -P arquillian-jboss-managed"
 notifications:
   email:
     - btsaunde@gmail.com
