#7: Refactored REST Security API to be Similar to the one used by Amazon

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,7 @@ jdk: openjdk6
 script: "mvn install -P arquillian-jboss-managed"
 notifications:
   email:
-    - btsaunde@gmail.com
+    recipients:
+      - btsaunde@gmail.com
+    on_success: always
+    on_failure: always
