--- a/pom.xml
+++ b/pom.xml
@@ -450,6 +450,13 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-site-plugin</artifactId>
 				<version>3.0</version>
+				<dependencies>
+					<dependency>
+						<groupId>org.apache.maven.skins</groupId>
+						<artifactId>maven-fluido-skin</artifactId>
+						<version>1.2.3-SNAPSHOT</version>
+					</dependency>
+				</dependencies>
 				<configuration>
 					<reportPlugins>
 						<plugin>
