--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -21,7 +21,6 @@
 # <http://www.gnu.org/licenses/gpl-3.0.html>.
 # #L%
 ###
-net.bryansaunders.constraints.password=Invalid Password
 regBean.firstName.notBlank=First Name is required.
 regBean.lastName.notBlank=Last Name is required.
 regBean.email.notBlank=Email is required.
@@ -29,4 +28,4 @@ regBean.password.notBlank=Password is required.
 regBean.confirmationPassword.notBlank=Password confirmation is required.
 regBean.email.email=Email is not a valid email address.
 regBean.password.password=Password does not meet the minimum requirements.
-regBean.fieldMatch.password=Passwords must match.
+regBean.password.match=Passwords must match.
