--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -28,4 +28,4 @@ regBean.password.notBlank=Password is required.
 regBean.confirmationPassword.notBlank=Password confirmation is required.
 regBean.email.email=Email is not a valid email address.
 regBean.password.password=Password does not meet the minimum requirements.
-regBean.password.match=Passwords must match.
+regBean.field.match=Passwords must match.
